# tiny-renderer

./: .gitignore  CMakeLists.txt  README.md
glsl/: screen_fragment.glsl  screen_vertex.glsl  vertex.glsl
include/: Pixel.hpp  Renderer.hpp  RendererBuffer.hpp  Structures.hpp  Texel.hpp  Texture.hpp  Vertex.hpp
src/: Framebuffer.cpp  Pixel.cpp  Renderer.cpp  RendererBuffer.cpp  RendererProgram.cpp  Texel.cpp  Texture.cpp  Vertex.cpp  main.cpp
